table in main menu is now fixed width --> elements dont jump around when editing or deleting

--- a/src/app/components/main-menu/main-menu.component.css
+++ b/src/app/components/main-menu/main-menu.component.css
@@ -15,6 +15,10 @@
     color:red;
 }
 
+#table-element{
+    width: 250px;
+}
+
 #balance-display{
     margin-left: 10px;
     float: right;
